2024-01-29T16:18:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7699122379 # 68
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
* notice: last 14d: unq all: 3 28
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 864 1577
* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 864 1578
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-29]

2024-01-29T08:18:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7693065337 # 67
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
* notice: last 14d: unq all: 3 27
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 863 1576
* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 864 1577
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-29]

2024-01-28T16:16:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7686957409 # 65
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
* notice: last 14d: unq all: 3 26
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 863 1575
* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 863 1576
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-28]

2024-01-28T08:18:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7684465759 # 64