@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-29T16:18:03Z",
+  "timestamp" : "2024-01-30T08:17:57Z",
   "count_outdated" : 1550,
   "uniques_outdated" : 849,
-  "count" : 1578,
-  "uniques" : 864,
+  "count" : 1579,
+  "uniques" : 865,
   "clones" : [
     {
       "timestamp": "2024-01-17T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
