@@ -1,5 +1,5 @@
 {
-  "count": 28,
+  "count": 29,
   "uniques": 3,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2024-01-29T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-30T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
